...
                        .foregroundStyle(.blue)
                        .font(.system(size: 14))
                        .frame(width: 80, height: 27)
                        .overlay(RoundedRectangle(cornerRadius: 6)
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
                        VStack(spacing: 8) {
                            if viewModel.tableDataModel.selectedRows.count == 1 {
                                Button(action: {
                                    showingPopover = false
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }
                            
                            Button(action: {
                                showingPopover = false
                                viewModel.deleteSelectedRow()
                            }) {
...
                                    .foregroundStyle(.red)
                                    .font(.system(size: 14))
                                    .frame(height: 27)
                            }
                            .padding(.horizontal, 16)
                            .padding(.bottom, 10)
                            .accessibilityIdentifier("TableDeleteRowIdentifier")
                            
//                            Button(action: {
//                                showingPopover = false
//                                viewModel.duplicateRow()
//                            }) {
//                                Text("Duplicate \(rowTitle)")
//                                    .foregroundStyle(.selection)
//                                    .font(.system(size: 14))
//                                    .frame(height: 27)
//                            }
//                            .padding(.horizontal, 16)
//                            .padding(.bottom, 10)
//                            .accessibilityIdentifier("TableDuplicateRowIdentifier")
                        }
                        .frame(width: 180)
                        .presentationCompactAdaptation(.popover)

                    } else {
                        VStack(spacing: 8) {
...
                    .frame(height: 27)
                    .padding(.horizontal, 16)
                    .overlay(RoundedRectangle(cornerRadius: 6)
                        .stroke(Color.buttonBorderColor, lineWidth: 1))
            }
            .disabled(viewModel.tableDataModel.mode == .readonly)
            .accessibilityIdentifier("TableAddRowIdentifier")
        }
    }

    var rowTitle: String {
        "\(viewModel.tableDataModel.selectedRows.count) " + (viewModel.tableDataModel.selectedRows.count > 1 ? "rows": "row")
    }
...
                            }
                            .overlay(
                                RoundedRectangle(cornerRadius: 6)
                                    .stroke(Color.allFieldBorderColor, lineWidth: 1)
                            )
                        })
                        .accessibilityIdentifier("ApplyAllButtonIdentifier")
                        
                        Button(action: {
                            presentationMode.wrappedValue.dismiss()
                        }, label: {
                            ZStack {
                                RoundedRectangle(cornerRadius: 6)
...
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableTextRowFormView(cellModel: Binding.constant(cellModel),
                                                     formulaValue: viewModel.formulaValue(columnID: columnID, rowID: row),
                                                     isUsedForBulkEdit: isUsedForBulkEdit)
                                    .frame(minHeight: 40)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsTextFieldIdentifier")

                            case .dropdown:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDropDownOptionListView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDropdownFieldIdentifier")
                            case .date:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDateView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit, isSingleLineLayout: true)
                                    .padding(.vertical, 2)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDateFieldIdentifier")
...
